--- a/Journal/Journal/Resources/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Resources/Base.lproj/Main.storyboard
@@ -19,35 +19,39 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="75" id="QrH-dB-YwQ" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="75"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="77" id="QrH-dB-YwQ" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="77"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QrH-dB-YwQ" id="we8-lg-PbM">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="74.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="76.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J0D-Uq-glD">
                                             <rect key="frame" x="20" y="11" width="374" height="60"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="DlX-BQ-clO">
-                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="19.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="19"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Creative Title here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Oq-vH-TFB">
-                                                            <rect key="frame" x="0.0" y="0.0" width="239" height="19.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="239" height="19"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12/21/89, 12:20 pm " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JNE-rf-BBv">
-                                                            <rect key="frame" x="247" y="0.0" width="127" height="19.5"/>
+                                                            <rect key="frame" x="247" y="0.0" width="127" height="19"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LabelLabelLabelLabelLabelLabelLabelLabelLabel" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ziN-oA-zwo">
-                                                    <rect key="frame" x="0.0" y="39.5" width="374" height="20.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ziN-oA-zwo">
+                                                    <rect key="frame" x="0.0" y="19" width="374" height="41"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="41" id="owJ-gy-29I"/>
+                                                    </constraints>
+                                                    <string key="text">LabelLabelLabelLabelLabelLabelLabelLabelLabel LabelLabelLabelLabelLabelLabelLabelLabelLabel LabelLabelLabelLabelLabelLabelLabelLabelLabel</string>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -55,11 +59,12 @@
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstItem="ziN-oA-zwo" firstAttribute="leading" secondItem="J0D-Uq-glD" secondAttribute="leading" id="1MU-0A-YMQ"/>
                                                 <constraint firstAttribute="trailing" secondItem="DlX-BQ-clO" secondAttribute="trailing" id="4gM-Rf-1VN"/>
+                                                <constraint firstAttribute="bottom" secondItem="ziN-oA-zwo" secondAttribute="bottom" id="BHY-oj-GRh"/>
                                                 <constraint firstItem="DlX-BQ-clO" firstAttribute="leading" secondItem="J0D-Uq-glD" secondAttribute="leading" id="Byy-NE-mcT"/>
-                                                <constraint firstAttribute="bottom" secondItem="ziN-oA-zwo" secondAttribute="bottom" id="M7i-h1-Yd1"/>
-                                                <constraint firstAttribute="trailing" secondItem="ziN-oA-zwo" secondAttribute="trailing" id="Np5-NR-viN"/>
+                                                <constraint firstItem="ziN-oA-zwo" firstAttribute="leading" secondItem="J0D-Uq-glD" secondAttribute="leading" id="Gtu-AP-vWb"/>
+                                                <constraint firstAttribute="trailing" secondItem="ziN-oA-zwo" secondAttribute="trailing" id="KFJ-I0-oj5"/>
+                                                <constraint firstItem="ziN-oA-zwo" firstAttribute="top" secondItem="DlX-BQ-clO" secondAttribute="bottom" id="XI3-Ey-UgN"/>
                                                 <constraint firstItem="DlX-BQ-clO" firstAttribute="top" secondItem="J0D-Uq-glD" secondAttribute="top" id="iko-rj-teu"/>
                                                 <constraint firstAttribute="height" constant="60" id="xA4-Wg-S7g"/>
                                             </constraints>
