--- a/JournalCoreDataHW/JournalCoreDataHW/Views/Base.lproj/Main.storyboard
+++ b/JournalCoreDataHW/JournalCoreDataHW/Views/Base.lproj/Main.storyboard
@@ -97,7 +97,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G6e-xW-zKM">
-                                <rect key="frame" x="20" y="140" width="374" height="30"/>
+                                <rect key="frame" x="20" y="178" width="374" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="4IB-FJ-Xh6"/>
                                 </constraints>
@@ -106,7 +106,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="t9X-Ew-WfW">
-                                <rect key="frame" x="20" y="178" width="374" height="250"/>
+                                <rect key="frame" x="20" y="216" width="374" height="250"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="250" id="z8a-gF-KeI"/>
@@ -114,13 +114,27 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="hxH-hw-8nK">
+                                <rect key="frame" x="20" y="140" width="374" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="rQX-QC-MtN"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="😀"/>
+                                    <segment title="😐"/>
+                                    <segment title="😟"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="t9X-Ew-WfW" firstAttribute="top" secondItem="G6e-xW-zKM" secondAttribute="bottom" constant="8" id="5gx-eB-GSj"/>
-                            <constraint firstItem="G6e-xW-zKM" firstAttribute="top" secondItem="Cl9-3z-MUd" secondAttribute="top" id="80A-gL-Ghv"/>
+                            <constraint firstItem="Cl9-3z-MUd" firstAttribute="trailing" secondItem="hxH-hw-8nK" secondAttribute="trailing" constant="20" id="DyW-Dj-2ZF"/>
                             <constraint firstItem="t9X-Ew-WfW" firstAttribute="leading" secondItem="Cl9-3z-MUd" secondAttribute="leading" constant="20" id="FeQ-Ul-RVc"/>
                             <constraint firstItem="Cl9-3z-MUd" firstAttribute="trailing" secondItem="t9X-Ew-WfW" secondAttribute="trailing" constant="20" id="TEf-fa-sD2"/>
+                            <constraint firstItem="hxH-hw-8nK" firstAttribute="top" secondItem="Cl9-3z-MUd" secondAttribute="top" id="Txe-IV-ywF"/>
+                            <constraint firstItem="G6e-xW-zKM" firstAttribute="top" secondItem="hxH-hw-8nK" secondAttribute="bottom" constant="8" id="cV0-wU-Kof"/>
+                            <constraint firstItem="hxH-hw-8nK" firstAttribute="leading" secondItem="Cl9-3z-MUd" secondAttribute="leading" constant="20" id="kKv-rt-deQ"/>
                             <constraint firstItem="G6e-xW-zKM" firstAttribute="leading" secondItem="Cl9-3z-MUd" secondAttribute="leading" constant="20" id="tCa-wZ-voz"/>
                             <constraint firstItem="Cl9-3z-MUd" firstAttribute="trailing" secondItem="G6e-xW-zKM" secondAttribute="trailing" constant="20" id="zJ9-In-N3R"/>
                         </constraints>
@@ -135,6 +149,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="bodyTV" destination="t9X-Ew-WfW" id="Khr-bV-KzF"/>
+                        <outlet property="segmentedProperties" destination="hxH-hw-8nK" id="3UC-fh-Zst"/>
                         <outlet property="titleTF" destination="G6e-xW-zKM" id="b3G-sT-Xcf"/>
                     </connections>
                 </viewController>
@@ -160,6 +175,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="1Sh-Ds-8I4"/>
+        <segue reference="Kbv-Ry-bTw"/>
     </inferredMetricsTieBreakers>
 </document>
