Working on the mood switch.

--- a/Journal-CoreData/Journal-CoreData/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal-CoreData/Journal-CoreData/Storyboards/Base.lproj/Main.storyboard
@@ -96,7 +96,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="W4a-YH-hOf">
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="W4a-YH-hOf">
                                 <rect key="frame" x="16" y="156" width="382" height="29"/>
                                 <segments>
                                     <segment title="😩"/>
@@ -141,7 +141,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="entryTextView" destination="Zvq-d2-Xb9" id="wag-Vh-HzB"/>
+                        <outlet property="bodyTextView" destination="Zvq-d2-Xb9" id="2Gj-dt-iHJ"/>
                         <outlet property="moodSegmentControl" destination="W4a-YH-hOf" id="VpW-qr-86G"/>
                         <outlet property="titleTextField" destination="ago-zV-iTn" id="fKn-iI-uRE"/>
                     </connections>
